# extended_pl0_compiler

./: .gitignore  CLI_DEBUG_GUIDE.md  CMakeLists.txt  GUI_DEBUG_GUIDE.md  README.md  README.zh.md  TODO.md
doc/: Grammar.md
gui/: CodeEditor.cpp  CodeEditor.h  ConsoleWidget.cpp  ConsoleWidget.h  MainWindow.cpp  MainWindow.h  gui_main.cpp
include/: Common.h  Diagnostics.h  Instruction.h  Interpreter.h  Lexer.h  Optimizer.h  Parser.h  SourceManager.h  SymbolTable.h  Token.h
src/: Common.cpp  Diagnostics.cpp  Instruction.cpp  Interpreter.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  SourceManager.cpp  SymbolTable.cpp  Token.cpp  main.cpp
test/diagnostics/correct/: cor_01_diag_clean.pl0
test/diagnostics/error/: err_01_diag_caret_pos.pl0  err_02_diag_long_line.pl0  err_03_diag_tab_align.pl0
test/extensions/: complex_test.pl0
test/integration/correct/: cor_01_bubblesort.pl0  cor_02_quicksort_fixed.pl0  cor_03_linked_list.pl0  cor_04_matrix_mult.pl0  cor_05_prime_sieve.pl0  cor_06_tower_of_hanoi.pl0  cor_07_nqueens.pl0  cor_08_ackermann.pl0  cor_09_mergesort.pl0  cor_10_bst.pl0  cor_11_complex_math.pl0  cor_12_floodfill.pl0
test/integration/error/: err_01_scope_leak.pl0  err_02_type_confusion.pl0  err_03_array_index_abuse.pl0  err_04_const_reassign.pl0  err_05_invalid_heap_op.pl0
test/interpreter/correct/: cor_01_arithmetic_logic.pl0  cor_02_recursion_stack.pl0  cor_03_nested_scopes.pl0  cor_04_io_operations.pl0  cor_05_heap_new_del.pl0
test/interpreter/error/: err_01_div_zero.pl0  err_02_mod_zero.pl0  err_03_stack_overflow.pl0  err_04_heap_exhausted.pl0  err_05_invalid_alloc.pl0  err_06_array_neg_index.pl0
test/lexer/correct/: cor_01_comments_utf8.pl0  cor_02_keywords_identifiers.pl0  cor_03_numbers_arithmetic.pl0  cor_04_operators_relational.pl0  cor_05_punctuation_delimiters.pl0  cor_06_large_stress_test.pl0
test/lexer/error/: err_01_illegal_char.pl0  err_02_number_overflow.pl0  err_03_invalid_assign_1.pl0  err_04_trailing_dot_error.pl0  err_05_unclosed_comment_block.pl0  err_06_unclosed_comment_pascal.pl0  err_07_illegal_char_sequence.pl0  err_08_underscore_error.pl0  (+8 more)
test/optimized/: heap_sanity.pl0  opt_demo.pl0  pointers_arrays.pl0
test/unit/: 01_unit_bool_logic.pl0  02_unit_math_edge.pl0  03_unit_scope_shadow.pl0  04_unit_loop_bounds.pl0  05_unit_array_complex.pl0  06_unit_nested_calls.pl0  07_unit_heap_ops.pl0
(+47 files in other folders)
